--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-pro": "node ./src/server.mjs",
+    "start": "node ./src/server.mjs",
     "start-dev": "node --env-file .env ./src/server.mjs"
   },
   "keywords": [],
