--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "2.46.1",
     "ejs": "3.1.10",
     "express": "4.21.1",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "6.9.16"
   }
 }
